Added language dropdown

--- a/index.html
+++ b/index.html
@@ -606,6 +606,22 @@
                <div id="auth-container" class="waiting-auth">
                     <a href="auth.html" class="nav-link btn-auth">Sign Up / Login</a>
                 </div>
+                <div class="language-switcher">
+                    <button class="language-btn">
+                        <i class="fas fa-globe"></i>
+                        <span>EN</span>
+                        <i class="fas fa-chevron-down chevron-icon"></i>
+                    </button>
+                    <div class="language-dropdown">
+                        <a href="#" class="language-option">English (EN)</a>
+                        <a href="#" class="language-option">isiZulu (ZU)</a>
+                        <a href="#" class="language-option">Sesotho (ST)</a>
+                        <a href="#" class="language-option">Sepedi (P)</a>
+                        <a href="#" class="language-option">Afrikaans (AF)</a>
+                        <a href="#" class="language-option">Tshonga (TS)</a>
+                        
+                    </div>
+                </div>
                  <button class="btn-theme theme-toggle" aria-label="Toggle theme"><i class="fa-solid fa-moon"></i></button>
             </div>
             <div class="hamburger">
