provider cards all sorted

--- a/beauty-wellness-services.html
+++ b/beauty-wellness-services.html
@@ -521,13 +521,13 @@
                 <!-- Provider 1 -->
                 <div class="provider-card" data-rating="5" data-location="Alexandra" data-status="online">
                     <div class="provider-image">
-                        <img class="provider-photo" src="https://images.pexels.com/photos/3992870/pexels-photo-3992870.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" loading="lazy" alt="Woman getting her hair braided">
+                        <img class="provider-photo" src="https://i.pinimg.com/236x/00/e5/ff/00e5ff3ea93dd036ea2ced201f6df66f.jpg" loading="lazy" alt="Woman getting her hair braided">
                         <span class="verified-badge"><i class="fas fa-check-circle"></i> Verified</span>
                     </div>
                     <div class="provider-info">
                         <h3>The Braid Queen</h3>
                         <p class="provider-service">Hairstylist (Braids & Weaves)</p>
-                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Alexandra</p>
+                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Mabopane</p>
                         <div class="provider-rating">
                             <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                             <span class="rating-text">(450 reviews)</span>
@@ -540,11 +540,11 @@
                 </div>
                 <!-- Provider 2 -->
                 <div class="provider-card" data-rating="4.8" data-location="Tembisa" data-status="idle">
-                    <div class="provider-image"><img class="provider-photo" src="https://images.pexels.com/photos/3997388/pexels-photo-3997388.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" loading="lazy" alt="Nail technician painting nails"></div>
+                    <div class="provider-image"><img class="provider-photo" src="https://d375139ucebi94.cloudfront.net/region2/za/39114/biz_photo/2906ea77772d4aa2afc62c84c39353-clara-s-beauty-bar-biz-photo-f9e5bc9ded5346f986ab47337a49ff-booksy.jpeg?size=640x427" loading="lazy" alt="Nail technician painting nails"></div>
                     <div class="provider-info">
                         <h3>Naledi's Nail Bar</h3>
                         <p class="provider-service">Nail Technician</p>
-                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Tembisa</p>
+                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Hammanskraal</p>
                         <div class="provider-rating">
                             <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                             <span class="rating-text">(280 reviews)</span>
@@ -557,11 +557,11 @@
                 </div>
                 <!-- Provider 3 -->
                 <div class="provider-card" data-rating="4.9" data-location="Alexandra" data-status="offline">
-                    <div class="provider-image"><img class="provider-photo" src="https://images.pexels.com/photos/208052/pexels-photo-208052.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" loading="lazy" alt="Makeup artist applying makeup"></div>
+                    <div class="provider-image"><img class="provider-photo" src="ole.jpg" loading="lazy" alt="Makeup artist applying makeup"></div>
                     <div class="provider-info">
-                        <h3>Glam by Zola</h3>
+                        <h3>Glam by Ole</h3>
                         <p class="provider-service">Makeup Artist</p>
-                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Alexandra</p>
+                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Soshanguve</p>
                         <div class="provider-rating">
                             <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                             <span class="rating-text">(195 reviews)</span>
@@ -574,11 +574,11 @@
                 </div>
                 <!-- Provider 4 -->
                  <div class="provider-card" data-rating="4.7" data-location="Soweto" data-status="online">
-                    <div class="provider-image"><img class="provider-photo" src="https://images.pexels.com/photos/3998414/pexels-photo-3998414.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" loading="lazy" alt="Barber giving a haircut"></div>
+                    <div class="provider-image"><img class="provider-photo" src="https://lh3.googleusercontent.com/FnwjM0oJbhXzkdGDM_Wpf-Ybpocsx5m7cVktI_bfGt_7IrZuVDB1n-5QXbQQqJBE61Hk6rqDvQGVnlK05QA9w36vOqEbQWHCEA=s400" loading="lazy" alt="Barber giving a haircut"></div>
                     <div class="provider-info">
                         <h3>Fresh Cuts Barber</h3>
                         <p class="provider-service">Barber Shop</p>
-                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Soweto</p>
+                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Soshanguve</p>
                         <div class="provider-rating">
                             <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></div>
                             <span class="rating-text">(312 reviews)</span>
