--- a/creative-services.html
+++ b/creative-services.html
@@ -495,8 +495,8 @@
     <main class="services-page">
         <div class="container">
             <div class="section-header">
-                <h2>Car Maintenance</h2>
-                <p>Find trusted mechanics, car washes, and auto electricians in your area.</p>
+                <h2>Creative & Digital</h2>
+                <p>Find experts who transform imagination into digital impact.</p>
             </div>
 
             <div class="filter-bar">
@@ -520,11 +520,11 @@
             <div class="providers-grid" id="providers-container">
                 <!-- Car Service Providers -->
                 <div class="provider-card" data-rating="4.8" data-location="Soweto" data-status="online">
-                    <div class="provider-image"><img class="provider-photo" src="https://images.pexels.com/photos/4488636/pexels-photo-4488636.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" loading="lazy" alt="Mechanic working on a car"></div>
+                    <div class="provider-image"><img class="provider-photo" src="https://images.pexels.com/photos/10182853/pexels-photo-10182853.jpeg" loading="lazy" alt="Graphic Design"></div>
                     <div class="provider-info">
-                        <h3>Sbu's Auto Repair</h3>
-                        <p class="provider-service">Mechanic</p>
-                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Soweto</p>
+                        <h3>Pixel Perfect Studio</h3>
+                        <p class="provider-service">Graphic Design & Branding</p>
+                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Pretoria Central</p>
                         <div class="provider-rating">
                             <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                             <span class="rating-text">(112 reviews)</span>
@@ -537,13 +537,13 @@
                 </div>
                 <div class="provider-card" data-rating="5" data-location="Tembisa" data-status="idle">
                     <div class="provider-image">
-                        <img class="provider-photo" src="https://images.pexels.com/photos/3807279/pexels-photo-3807279.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" loading="lazy" alt="Car being washed">
+                        <img class="provider-photo" src="https://images.pexels.com/photos/16023919/pexels-photo-16023919.jpeg" loading="lazy" alt="Web Design">
                         <span class="verified-badge"><i class="fas fa-check-circle"></i> Verified</span>
                     </div>
                     <div class="provider-info">
-                        <h3>Gleam Team Car Wash</h3>
-                        <p class="provider-service">Car Wash & Detailing</p>
-                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Tembisa</p>
+                        <h3>Web Wizards</h3>
+                        <p class="provider-service">Website Development & UI/UX Design</p>
+                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Lotus Gardens</p>
                         <div class="provider-rating">
                             <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                             <span class="rating-text">(250 reviews)</span>
@@ -555,11 +555,11 @@
                     </div>
                 </div>
                 <div class="provider-card" data-rating="4.5" data-location="Soweto" data-status="offline">
-                    <div class="provider-image"><img class="provider-photo" src="https://images.pexels.com/photos/8994236/pexels-photo-8994236.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" loading="lazy" alt="Auto electrician checking wires"></div>
+                    <div class="provider-image"><img class="provider-photo" src="https://images.pexels.com/photos/8276342/pexels-photo-8276342.jpeg" loading="lazy" alt="Social media"></div>
                     <div class="provider-info">
-                        <h3>Sparks & Wires Auto</h3>
-                        <p class="provider-service">Auto Electrician</p>
-                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Soweto</p>
+                        <h3>Vibe Creators</h3>
+                        <p class="provider-service">Social Media Content & Marketing</p>
+                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Soshanguve</p>
                         <div class="provider-rating">
                             <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></div>
                             <span class="rating-text">(75 reviews)</span>
@@ -571,11 +571,11 @@
                     </div>
                 </div>
                 <div class="provider-card" data-rating="4.7" data-location="Katlehong" data-status="online">
-                    <div class="provider-image"><img class="provider-photo" src="https://images.pexels.com/photos/6870321/pexels-photo-6870321.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" loading="lazy" alt="Tyre fitting service"></div>
+                    <div class="provider-image"><img class="provider-photo" src="https://images.pexels.com/photos/3379934/pexels-photo-3379934.jpeg" loading="lazy" alt="Tyre fitting service"></div>
                     <div class="provider-info">
-                        <h3>Katlehong Tyre Fitment</h3>
-                        <p class="provider-service">Tyre Sales & Services</p>
-                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Katlehong</p>
+                        <h3>Motion Masters</h3>
+                        <p class="provider-service">Video Production & Animation</p>
+                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Mamelodi</p>
                         <div class="provider-rating">
                             <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></div>
                             <span class="rating-text">(98 reviews)</span>
