--- a/education-services.html
+++ b/education-services.html
@@ -522,7 +522,7 @@
                 <!-- Education Service Providers -->
                 <div class="provider-card" data-rating="4.9" data-location="Ga-Rankuwa" data-status="online">
                     <div class="provider-image">
-                        <img class="provider-photo" src="https://images.pexels.com/photos/5905709/pexels-photo-5905709.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" loading="lazy" alt="Tutor helping student">
+                        <img class="provider-photo" src="https://cdn.24.co.za/files/Cms/General/d/2022/d672fb5a20d64dd2b90044fb2f4f99eb.jpg" loading="lazy" alt="Tutor helping student">
                         <span class="verified-badge"><i class="fas fa-check-circle"></i> Verified</span>
                     </div>
                     <div class="provider-info">
@@ -540,7 +540,7 @@
                     </div>
                 </div>
                 <div class="provider-card" data-rating="4.7" data-location="Soshanguve" data-status="offline">
-                    <div class="provider-image"><img class="provider-photo" src="https://images.pexels.com/photos/1462980/pexels-photo-1462980.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" loading="lazy" alt="Driving school car"></div>
+                    <div class="provider-image"><img class="provider-photo" src="https://midatlanticdrivingschool.net/files/2022/12/pexels-ron-lach-9518244.jpg?w=1600&a=t" loading="lazy" alt="Driving school car"></div>
                     <div class="provider-info">
                         <h3>Get Your License DS</h3>
                         <p class="provider-service">Driving School</p>
@@ -556,9 +556,9 @@
                     </div>
                 </div>
                 <div class="provider-card" data-rating="4.8" data-location="Ga-Rankuwa" data-status="idle">
-                    <div class="provider-image"><img class="provider-photo" src="https://images.pexels.com/photos/5428260/pexels-photo-5428260.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" loading="lazy" alt="Person coding on a laptop"></div>
+                    <div class="provider-image"><img class="provider-photo" src="https://scx2.b-cdn.net/gfx/news/2018/pupilsatthec.jpg" loading="lazy" alt="Person coding on a laptop"></div>
                     <div class="provider-info">
-                        <h3>Soweto Code Camp</h3>
+                        <h3>Rankuwa Code Camp</h3>
                         <p class="provider-service">Coding & IT Skills</p>
                         <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Ga-Rankuwa</p>
                         <div class="provider-rating">
@@ -572,7 +572,7 @@
                     </div>
                 </div>
                 <div class="provider-card" data-rating="5" data-location="Mamelodi" data-status="online">
-                    <div class="provider-image"><img class="provider-photo" src="https://images.pexels.com/photos/3769999/pexels-photo-3769999.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" loading="lazy" alt="Person playing guitar"></div>
+                    <div class="provider-image"><img class="provider-photo" src="https://groundup.org.za/media/uploads/images/photographers/Ashraf%20Hendricks/khayelitshamusicacademy/khayelitshamusicacademy-20240418-6v2a2883hr.jpg" loading="lazy" alt="Person playing guitar"></div>
                     <div class="provider-info">
                         <h3>Themba's Guitar Lessons</h3>
                         <p class="provider-service">Music Teacher</p>
