--- a/event-services.html
+++ b/event-services.html
@@ -496,8 +496,8 @@
     <main class="services-page">
         <div class="container">
             <div class="section-header">
-                <h2>Education Services</h2>
-                <p>Connect with tutors, skills trainers, and driving schools.</p>
+                <h2>Event Planning & Services</h2>
+                <p>Find expert planners, caterers, and entertainers to make your events unforgettable.</p>
             </div>
 
             <div class="filter-bar">
@@ -522,13 +522,13 @@
                 <!-- Education Service Providers -->
                 <div class="provider-card" data-rating="4.9" data-location="Ga-Rankuwa" data-status="online">
                     <div class="provider-image">
-                        <img class="provider-photo" src="https://images.pexels.com/photos/5905709/pexels-photo-5905709.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" loading="lazy" alt="Tutor helping student">
+                        <img class="provider-photo" src="https://images.pexels.com/photos/1616113/pexels-photo-1616113.jpeg" loading="lazy" alt="Wedding table">
                         <span class="verified-badge"><i class="fas fa-check-circle"></i> Verified</span>
                     </div>
                     <div class="provider-info">
-                        <h3>Maths Whiz Tutors</h3>
-                        <p class="provider-service">Maths & Science Tutoring</p>
-                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Ga-Rankuwa</p>
+                        <h3>Eleganza Events</h3>
+                        <p class="provider-service">Wedding & Bridal Showers</p>
+                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Winteveld</p>
                         <div class="provider-rating">
                             <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                             <span class="rating-text">(95 reviews)</span>
@@ -540,10 +540,10 @@
                     </div>
                 </div>
                 <div class="provider-card" data-rating="4.7" data-location="Soshanguve" data-status="offline">
-                    <div class="provider-image"><img class="provider-photo" src="https://images.pexels.com/photos/1462980/pexels-photo-1462980.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" loading="lazy" alt="Driving school car"></div>
+                    <div class="provider-image"><img class="provider-photo" src="https://images.pexels.com/photos/33411205/pexels-photo-33411205.jpeg" loading="lazy" alt="Corporate Event"></div>
                     <div class="provider-info">
-                        <h3>Get Your License DS</h3>
-                        <p class="provider-service">Driving School</p>
+                        <h3>Joyful Gatherings</h3>
+                        <p class="provider-service">Festivals,Community & Corporate Events</p>
                         <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Soshanguve</p>
                         <div class="provider-rating">
                             <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></div>
@@ -556,11 +556,11 @@
                     </div>
                 </div>
                 <div class="provider-card" data-rating="4.8" data-location="Ga-Rankuwa" data-status="idle">
-                    <div class="provider-image"><img class="provider-photo" src="https://images.pexels.com/photos/5428260/pexels-photo-5428260.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" loading="lazy" alt="Person coding on a laptop"></div>
+                    <div class="provider-image"><img class="provider-photo" src="https://images.pexels.com/photos/7358367/pexels-photo-7358367.jpeg" loading="lazy" alt="Parents celebrating kid birthday"></div>
                     <div class="provider-info">
-                        <h3>Soweto Code Camp</h3>
-                        <p class="provider-service">Coding & IT Skills</p>
-                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Ga-Rankuwa</p>
+                        <h3>Joyful Gatherings</h3>
+                        <p class="provider-service">Birthday & Private Parties</p>
+                        <p class="provider-location"><i class="fas fa-map-marker-alt"></i>Attredgeville</p>
                         <div class="provider-rating">
                             <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                             <span class="rating-text">(110 reviews)</span>
@@ -572,10 +572,10 @@
                     </div>
                 </div>
                 <div class="provider-card" data-rating="5" data-location="Mamelodi" data-status="online">
-                    <div class="provider-image"><img class="provider-photo" src="https://images.pexels.com/photos/3769999/pexels-photo-3769999.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" loading="lazy" alt="Person playing guitar"></div>
+                    <div class="provider-image"><img class="provider-photo" src="https://images.pexels.com/photos/8040948/pexels-photo-8040948.jpeg" loading="lazy" alt="Person playing guitar"></div>
                     <div class="provider-info">
-                        <h3>Themba's Guitar Lessons</h3>
-                        <p class="provider-service">Music Teacher</p>
+                        <h3>Luxe Affairs</h3>
+                        <p class="provider-service">Gala Dinners</p>
                         <p class="provider-location"><i class="fas fa-map-marker-alt"></i> Mamelodi</p>
                         <div class="provider-rating">
                             <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
