filters for search button

--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                         <a href="#" class="language-option">Sesotho (ST)</a>
                         <a href="#" class="language-option">Sepedi (P)</a>
                         <a href="#" class="language-option">Afrikaans (AF)</a>
-                        <a href="#" class="language-option">Tshonga (TS)</a>
+                        <a href="#" class="language-option">Xitsonga ()</a>
                         
                     </div>
                 </div>
